--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -3,4 +3,4 @@
 <hr>
 <%= link_to "Редактировать", edit_todo_path(@todo), :class => 'btn btn-warning' %>
 
-<%= link_to "Удалить", todo_path(@todo), method: :delete, data:{confirm: "Удалить"}, :class => 'btn btn-danger' %>
+<%= link_to "del", todo_path(@todo), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: "btn btn-danger ml-3" %>
