add delete method

--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -11,6 +11,7 @@
   <div class="allert allert-light">
     <p><strong><%= comment.username %></strong>: <%= comment.body %></p>
   </div>
+  <%= link_to 'ddd', [comment.todo, comment], method: :delete, :class => 'btn btn-warning' %>
  <% end %>
 <hr>
 <h2>Добавление коментария</h2>
