--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -7,24 +7,7 @@
 </div>
 <hr>
 <h2>все коментарии</h2>
-<% @todo.comments.each do |comment| %>
-  <div class="allert allert-light">
-    <p><strong><%= comment.username %></strong>: <%= comment.body %></p>
-  </div>
-  <%= link_to 'ddd', [comment.todo, comment], method: :delete, :class => 'btn btn-warning' %>
- <% end %>
+  <%= render @todo.comments %>
 <hr>
 <h2>Добавление коментария</h2>
-<%= form_with model: [@todo, @todo.comments.build] do |f| %>
-  <p>
-    <%= f.label :Пользыватель %><br>
-    <%= f.text_field(:username, {:class => 'form-control'}) %>
-  </p>
-  <p>
-    <%= f.label :Текст %><br>
-    <%= f.text_area(:body, {:class => 'form-control'}) %>
-  </p>
-  <p>
-    <%= f.submit("comments add", {:class => 'form-control btn btn-warning'}) %>
-  </p>
-<% end %>
+  <%= render "comments/form" %>
