create partial todo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </a>
       <nav class="d-flex flex-columb flex-md-row mt-2 mt-md-0 ms-md-auto btn-group" role="group" aria-label="head">
         <span class="text-dark text-decoration-none btn btn-dark"><%= link_to "Home", home_path %></span>
-        <span class="text-dark text-decoration-none btn btn-dark"><%= link_to "Creat todo", new_todo_path %></span>
+        <span class="text-dark text-decoration-none btn btn-dark"><%= link_to "Create todo", new_todo_path %></span>
         <span class="text-dark text-decoration-none btn btn-dark"><%= link_to "ToDos", todos_path %></span>
       </nav>
     </div>
