--- a/app/views/pages/todopage.html.erb
+++ b/app/views/pages/todopage.html.erb
@@ -4,4 +4,4 @@
   <p><%= todo.body %></p>
   <%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %>
 <% end %>
-<span class="btn btn-outline-primary"><%= link_to "Add", new_todo_path %></span>
+<span class="btn btn-outline-primary"><%= link_to "Добавить", new_todo_path %></span>
