--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @todo.title %></h1>
 <p><%= @todo.body %></p>
+<p><%= @todo.todopost %></p>
+
 <hr>
 <%= link_to "Редактировать", edit_todo_path(@todo), :class => 'btn btn-warning' %>
 
