--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,8 +1,9 @@
 <h1>todos glav</h1>
 <% @todos.each do |todo| %>
-<div class="well">
-  <h3><%= todo.title %></h3>
-  <p><%= todo.body %></p>
-  <%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %>
+  <div class="well">
+    <h3><%= todo.title %></h3>
+    <p><%= todo.body %></p>
+    <p><%= todo.todopost %></p>
+    <%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %>
   </div>
 <% end %>
