--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -13,6 +13,10 @@
   <%= f.label :текст %><br>
     <%= f.text_area(:body, {:class => 'form-control'}) %>
   </p>
+  <p>
+  <%= f.label :пост %><br>
+    <%= f.text_area(:todopost, {:class => 'form-control'}) %>
+  </p>
 
   <p>
     <%= f.submit({:class => 'form-control btn btn-success'}) %>
