--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,6 +8,14 @@
   </div>
 
   <div>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %><br>
+    <%= post.errors.full_messages_for(:body).each do |message| %>
+      <div><%= message %></div>
+    <%= end %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
