--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,24 +1,3 @@
 <h1>New Post</h1>
 
-<%= form_with model: @post do |form| %>
-  <div>
-    <%= form.label :Пост %><br>
-    <%= form.text_field :description %>
-    <% @post.errors.full_messages_for(:description).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :Коментарии %><br>
-    <%= form.text_area :body %>
-    <% @post.errors.full_messages_for(:body).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
-
+<%= render "form", post: @post %>
