--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 <%= form_with model: [@todo, @comment] do |f| %>
   <p>
-    <%= f.label :Пользыватель %><br>
+    <%= f.label :Пользователь %><br>
     <%= f.text_field(:username, {:class => 'form-control'}) %>
   </p>
   <p>
