--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -6,3 +6,19 @@
     <%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %>
   </div>
 <% end %>
+
+<html>
+ <head>
+   <link rel="stylesheet" type="text/css" href="main.css" />
+ </head>
+
+<body>
+ <div id="page-container">
+   <div id="content-wrap">
+     <!-- all other page content -->
+   </div>
+   <footer id="footer"></footer>
+ </div>
+</body>
+
+</html>
