--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,7 +17,7 @@
 		<div class="text-left p-3 mt-2 text-light">
 			<h20 class="pull-left">Mariupol - Ponad Use </h20>
 			<p class="pull-left"><a href="#">lyapsq@gmail.com</a></p>
-			<p class="pull-right"><a href="#">GitHub - Github.com/Lyapsq</a></p>
+			<p class="pull-left"><a href="#">GitHub - github.com/sandora47/TODOS</a></p>
 		</div>
 	</footer>
 
