comments to todos

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,5 +1,5 @@
 <h1>todos glav</h1>
-<% @todo.each do |todo| %>
+<% @todos.each do |todo| %>
   <div class="well">
     <h3><%= todo.title %></h3>
     <p><%= todo.body %></p>
