--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="{% static 'assets/stylesheets/styles.css' %}">
   </head>
 
   <body>
@@ -18,9 +19,9 @@
         <span class="fs-1">ToDos</span>
       </a>
       <nav class="d-flex flex-columb flex-md-row mt-2 mt-md-0 ms-md-auto btn-group" role="group" aria-label="head">
-        <span class="text-white text-decoration-none btn btn-dark"><%= link_to "Home", home_path %></span>
-        <span class="text-white text-decoration-none btn btn-dark"><%= link_to "Creat todo", new_todo_path %></span>
-        <span class="text-white text-decoration-none btn btn-dark"><%= link_to "ToDos", todos_path %></span>
+        <span class="btn btn-dark"><%= link_to "Home", home_path %></span>
+        <span class="btn btn-dark"><%= link_to "Creat todo", new_todo_path %></span>
+        <span class="btn btn-dark"><%= link_to "ToDos", todos_path %></span>
         <div class="btn-group">
           <% if user_signed_in? %>
             <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
@@ -31,14 +32,15 @@
                 method: :delete, :class => "dropdown-item" %></span>
             </nav>
           <% else %>
-            <span class="text-decoration-none btn btn-dark"><%= link_to "Зарегистрироватся", new_user_path %></span>
-            <span class="text-decoration-none btn btn-dark"><%= link_to "Войти", new_session_path %></span>
+            <span class="btn btn-dark"><%= link_to "Зарегистрироватся", new_user_path %></span>
+            <span class="btn btn-dark"><%= link_to "Войти", new_session_path %></span>
           <% end %>
         </div>
       </nav>
     </div>
     <div class="container">
       <%= yield %>
+      <%= render "layouts/footer" %>
     </div>
   </body>
 </html>
