--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,8 +1,18 @@
 <h1>todos glav</h1>
 <% @todo.each do |todo| %>
-  <div class="well">
+<article class="card mt-3">
+  <div class="card-body">
     <h3><%= todo.title %></h3>
-    <p><%= todo.body %></p>
-    <%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %>
+    <section class="card-text">
+      <time datetime="<%= todo.formatted_created_at %>">
+        <small><%= todo.formatted_created_at %></small>
+      </time>
+      <p class="my-2"><%= todo.body %></p>
+    </section>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <span class="me-1 py-1"><%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %></span>
+      <span class="me-1 py-1"><%= button_to 'Удалить', todo_path(todo), method: :delete, :class => 'btn btn-danger' %></span>
+    </div>
   </div>
+</article>
 <% end %>
