--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -5,10 +5,14 @@ footer {
   left: 0;
   width: 100%;
   padding: 0 2% 0 2%;
+  background-color: darkgrey;
 }
-
 
 a{
   text-decoration: none;
+  color: white;
+}
+
+svg{
   color: white;
 }
