--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
+    <%= favicon_link_tag asset_path('unnamed.png') %>
   </head>
 
   <body>
