add images to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,9 +17,9 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <%= image_tag("/app/assets/images/instagram1.png", size: "24x24")%>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+      <li class="ms-3"><%= image_tag("twiter.svg", size: "30")%></li>
+      <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/"><%= image_tag("instagram.svg", size: "35")%></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><%= image_tag("facebook.svg", size: "35")%></a></li>
     </ul>
   </footer>
 </div>
