--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <svg width="10" height="32" class="me-2" id="one" viewBox="0 0 118 94"><%= image_tag("unnamed.png", size: "40")%></svg>
         <span class="fs-1">ToDos</span>
       </a>
-      <nav class="d-flex flex-columb flex-md-row mt-2 mt-md-0 ms-md-auto btn-group" role="group" aria-label="head">
+      <nav class="d-flex flex-columb flex-md-row mt-md-0 ms-md-auto btn-group" role="group" aria-label="head">
         <span class="btn btn-dark"><%= link_to "Home", home_path %></span>
         <span class="btn btn-dark"><%= link_to "Creat todo", new_todo_path %></span>
         <span class="btn btn-dark"><%= link_to "ToDos", todos_path %></span>
