--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <span id="one">&copy; 2022 Company, Inc</span>
+  <footer class="d-flex justify-content-between align-items-center py-3 my-4">
+    <div>
+      <span id="text_footer">&copy; 2022 Company, Inc</span>
     </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+    <ul class="nav col-md-4 justify-content-end d-flex">
       <li class="ms-3"><a href="https://twitter.com/"><%= image_tag("twiter.svg", size: "30")%></a></li>
       <li class="ms-3"><a href="https://www.instagram.com/"><%= image_tag("instagram.svg", size: "35")%></a></li>
       <li class="ms-3"><a href="https://www.facebook.com/"><%= image_tag("facebook.svg", size: "35")%></a></li>
