--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,7 +1,8 @@
 
 footer{
-  position: absolute;
+  position: initial;
   left: 0;
+  bottom: 0;
   width: 100%;
   padding: 0 2%;
   background-color: darkgrey;
