--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -5,7 +5,8 @@ footer{
   bottom: 0;
   width: 100%;
   padding: 0 2%;
-  background-color: darkgrey;
+  background: url(footer.png) no-repeat;
+  background-size: cover;
 }
 
 a{
