--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -5,8 +5,7 @@ footer{
   bottom: 0;
   width: 100%;
   padding: 0 2%;
-  background: url(footer.png) no-repeat;
-  background-size: cover;
+  background: url(footer.png) repeat-x;
 }
 
 a{
