--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="d-flex justify-content-between align-items-center py-3 my-4">
+<footer class="d-flex justify-content-between align-items-center py-3">
   <div>
     <span id="text_footer">&copy; 2022 Company, Inc</span>
   </div>
