add flash and confirm

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
     <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= favicon_link_tag asset_path('unnamed.png') %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <div class="page">
       <%= render "layouts/header" %>
-      <div class="container"> 
+      <div class="container">
+        <% flash.each do |k, v| %>
+          <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
+        <% end %>
         <%= yield %>
       </div>
       <%= render "layouts/footer" %>
