--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     </a>
     <nav class="d-flex flex-columb flex-md-row mt-md-0 ms-md-auto btn-group" role="group" aria-label="head">
     <span class="btn btn-dark"><%= link_to "Home", home_path %></span>
-    <span class="btn btn-dark"><%= link_to "Creat todo", new_todo_path %></span>
+    <span class="btn btn-dark"><%= link_to "Creat todo", new_todo_path, data: {confirm:'Are you sure?'} %></span>
     <span class="btn btn-dark"><%= link_to "ToDos", todos_path %></span>
     <div class="btn-group">
         <% if user_signed_in? %>
