--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -16,25 +16,25 @@
 <%= render 'partials/errors', object: @comment %>
 
 <%= form_with model: [@todo, @comment] do |f| %>
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
+  <div class='mb-3 row'>
+    <div class='col-sm-2 col-form-label'>
       <%= f.label :body %>
     </div>
 
-    <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control' %>
+    <div class='col-sm-10'>
+      <%= f.text_area :body, class: 'form-control', placeholder: '' %>
     </div>
   </div>
   <p>
-    <%= f.submit("comments add", {:class => 'btn btn-warning'}) %>
+    <%= f.submit('comments add', {:class => 'btn btn-warning'}) %>
   </p>
 <% end %>
 
 <h2 class="mt-4">Comments</h2>
 
 <% @comments.each do |comment| %>
-  <article class="mb-3">
-    <time datetime="<%= comment.formatted_created_at %>">
+  <article class='mb-3'>
+    <time datetime='<%= comment.formatted_created_at %>'>
       <%= comment.formatted_created_at %>
     </time>
 
