--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,3 +1,4 @@
+<% currently_at 'ToDos' %>
 <h1>Редактирование коментария</h1>
 <%= render 'partials/errors', object: @comment %>
 <%= form_with model: [@todo, @comment] do |f| %>
