--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,3 +1,5 @@
+<% provide :page_title, 'Edit todo' %>
+<% currently_at 'ToDos' %>
 <h2>Редактирование поста</h2>
 <%= form_for @todo do |f| %>
   <% if @todo.errors.any? %>
