--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,3 +1,4 @@
+<% currently_at 'ToDos' %>
 <h1><%= @todo.title %></h1>
 <time datetime='<%= @todo.formatted_created_at %>'>
   <%= @todo.formatted_created_at %>
