--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-    <svg width="10" height="32" class="me-2" id="one" viewBox="0 0 118 94"><%= image_tag("unnamed.png", size: "40")%></svg>
+    <svg width="10" height="32" class="me-2"><%= image_tag("unnamed.png", size: "40")%></svg>
     <span class="fs-1">ToDos</span>
     </a>
     <nav class="d-flex flex-columb flex-md-row mt-md-0 ms-md-auto btn-group" role="group" aria-label="head">
