--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
         <% end %>
         <%= yield %>
       </div>
+      <div class="back-to-top" id="myBtn">
+        <%=link_to image_tag("top.png", size: "40")%>
+      </div>
+      <%= javascript_pack_tag 'top', 'data-turbolinks-track': 'reload' %>
       <%= render "layouts/footer" %>
     </div>
   </body>
