--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
       <div class="container">
         <%= yield %>
       </div>
+      <div class="back-to-top" id="myBtn">
+        <%=link_to image_tag("top.png", size: "40")%>
+      </div>
+      <%= javascript_pack_tag 'top', 'data-turbolinks-track': 'reload' %>
       <%= render "partials/footer" %>
     </div>
   </body>
