--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -16,12 +16,11 @@
 
 <%= render 'partials/errors', object: @comment %>
 
-<%= form_with model: [@todo, @comment] do |f| %>
+<%= form_with model: [@todo, @comment], local: true do |f| %>
   <div class='mb-3 row'>
     <div class='col-sm-2 col-form-label'>
       <%= f.label :body %>
     </div>
-
     <div class='col-sm-10'>
       <%= f.text_area :body, class: 'form-control', placeholder: '' %>
     </div>
