--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -14,8 +14,15 @@
             <%= current_user.name_or_email %>
           </button>
           <div type="button" class="dropdown-menu dropdown-menu-dark">
-          <span class="mt-4"><%= button_to 'log out', session_path,
-                                           method: :delete, class: "dropdown-item" %></span>
+            <span class="mt-4">
+              <%= link_to 'Edit', edit_user_path(current_user),
+                          class: "dropdown-item" %>
+
+              <hr class="dropdown-divider">
+
+              <%= button_to 'log out', session_path,
+                                             method: :delete, class: "dropdown-item" %>
+            </span>
           </div>
         <% else %>
           <span class="btn btn-dark"><%= link_to "Зарегистрироватся", new_user_path %></span>
