--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -2,22 +2,7 @@
 <h1>todos glav</h1>
 
 <span class="btn btn-info"><%= nav_tab "Add", new_todo_path %></span>
-<% @todos.each do |todo| %>
-  <article class="card mt-3" id="todo-<%= todo.id %>">
-    <div class="card-body">
-      <h3><%= sanitize todo.title %></h3>
-      <section class="card-text">
-        <time datetime="<%= todo.formatted_created_at %>">
-          <small><%= todo.formatted_created_at %></small>
-        </time>
-        <div class="my-2"><%= sanitize todo.body %></div>
-      </section>
-      <div class="btn-group" role="group" aria-label="Basic example">
-        <span class="me-1 py-1"><%= link_to "Читать далее", todo_path(todo), :class => 'btn btn-info' %></span>
-        <span class="me-1 py-1"><%= button_to 'Удалить', todo_path(todo), method: :delete, :class => 'btn btn-danger' %></span>
-      </div>
-    </div>
-  </article>
-<% end %>
+
+<%= render partial: 'todos/todo', collection: @todos %>
 
 <%= paginate @todos %>
