--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -25,3 +25,5 @@
 <h2 class='mt-4'>Comments</h2>
 
 <%= render partial: 'comments/comment', collection: @comments, as: :comment, locals: {todo: @todo} %>
+
+<%= paginate @comments %>
