--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -5,25 +5,10 @@
 <hr class='my-3'>
 <h2>Добавление коментария</h2>
 
-<%= render 'partials/errors', object: @comment %>
-
-<%= form_with model: [@todo, @comment] do |f| %>
-  <div class='mb-3 row'>
-    <div class='col-sm-2 col-form-label'>
-      <%= f.label :body %>
-    </div>
-
-    <div class='col-sm-10'>
-      <%= f.text_area :body, class: 'form-control', placeholder: '' %>
-    </div>
-  </div>
-  <p>
-    <%= f.submit('comments add', class: 'btn btn-warning') %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
 
 <h2 class='mt-4'>Comments</h2>
 
 <%= render partial: 'comments/comment', collection: @comments, as: :comment, locals: {todo: @todo} %>
 
-<%== pagy_bootstrap_nav @pagy %>
+<%= pagination @pagy %>
