--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,12 @@
   </head>
 
   <body>
-    <div class="page">
-      <%= yield :head_menu %>
-      <div class="container">
+  <div class="page">
+    <%= yield :head_menu %>
+    <div class="container">
+      <% flash.each do |k, v| %>
+        <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
+      <% end %>
         <%= yield %>
       </div>
       <%= render "partials/footer" %>
